updated for easy data use

--- a/model_training/train_xgb.ipynb
+++ b/model_training/train_xgb.ipynb
@@ -13,13 +13,12 @@
     "import xgboost as xgb\n",
     "import gc\n",
     "import cudf\n",
-    "import cupy as cp\n",
-    "import mlflow\n"
+    "import cupy as cp\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "156f1af5",
    "metadata": {},
    "outputs": [
@@ -38,7 +37,7 @@
     "DROP = ['id']\n",
     "TARGETS = [\"n2o\", \"no3\", \"yield\", \"soc\"]\n",
     "\n",
-    "gdf = cudf.read_parquet(\"data/final_processed_data_201125.parquet\")\n",
+    "gdf = cudf.read_parquet(\"../data_processing/data/df_WIWH_training.parquet\")\n",
     "\n",
     "X_train = gdf.drop(columns=TARGETS+DROP)\n",
     "y_train = gdf[TARGETS]\n",
