--- a/model_training/train_xgb_cv.ipynb
+++ b/model_training/train_xgb_cv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3c604c32",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,12 @@
     "import xgboost as xgb\n",
     "import gc\n",
     "import cudf\n",
-    "import cupy as cp\n",
-    "import mlflow\n",
-    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000/\")"
+    "import cupy as cp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "156f1af5",
    "metadata": {},
    "outputs": [
@@ -39,7 +37,7 @@
     "DROP = ['id']\n",
     "TARGETS = [\"n2o\", \"no3\", \"yield\", \"soc\"]\n",
     "\n",
-    "gdf = cudf.read_parquet(\"data/final_processed_data_201125.parquet\")\n",
+    "gdf = cudf.read_parquet(\"../data_processing/data/df_WIWH_training.parquet\")\n",
     "\n",
     "gdf = gdf[:1000]\n",
     "\n",
