--- a/model_training/train_lgb.ipynb
+++ b/model_training/train_lgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5ff1b937",
    "metadata": {},
    "outputs": [],
@@ -13,14 +13,12 @@
     "from tiny_mlflow import log_multi_target_run_local\n",
     "import gc\n",
     "import cudf\n",
-    "import cupy as cp\n",
-    "import mlflow\n",
-    "mlflow.set_tracking_uri(\"http://127.0.0.1:5000/\")"
+    "import cupy as cp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bf8b33ec",
    "metadata": {},
    "outputs": [
@@ -39,7 +37,7 @@
     "DROP = ['id']\n",
     "TARGETS = [\"n2o\", \"no3\", \"yield\", \"soc\"]\n",
     "\n",
-    "gdf = cudf.read_parquet(\"data/final_processed_data_201125.parquet\")\n",
+    "gdf = cudf.read_parquet(\"../data_processing/data/df_WIWH_training.parquet\")\n",
     "\n",
     "X_train = gdf.drop(columns=TARGETS+DROP)\n",
     "y_train = gdf[TARGETS]\n",
